gen/BNF_CompilerParser.java
// Generated from I:/PROYECTOS JAVA/BNF_Compiler/src\BNF_Compiler.g4 by ANTLR 4.9.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class BNF_CompilerParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		SUMA=1, RESTA=2, MULT=3, DIV=4, ASIGNACION=5, MAYOR_IGUALQ=6, MENOR_IGUALQ=7, 
		MAYOR_Q=8, MENOR_Q=9, IGUAL=10, EQUIVALENTE=11, DISTINTO=12, LLAVES_A=13, 
		LLAVES_C=14, CORCHETE_A=15, CORCHETE_C=16, PARENTESIS_A=17, PARENTESIS_C=18, 
		COMA=19, PUNTO=20, PUNTOCOMA=21, DOSPUNTOS=22, COMILLAS=23, IF=24, ELSE=25, 
		FOR=26, PRINT=27, INT=28, STRING=29, WHILE=30, NUMERO=31, TEXTO=32, WS=33;
	public static final int
		RULE_program = 0, RULE_ignore = 1, RULE_id = 2, RULE_numero = 3, RULE_decimal = 4, 
		RULE_operadores = 5, RULE_simbolos = 6, RULE_equivalente = 7, RULE_cadena = 8, 
		RULE_while_T = 9, RULE_for_T = 10, RULE_if_T = 11, RULE_print = 12, RULE_else_T = 13;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "ignore", "id", "numero", "decimal", "operadores", "simbolos", 
			"equivalente", "cadena", "while_T", "for_T", "if_T", "print", "else_T"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'+'", "'-'", "'*'", "'/'", "'='", "'>='", "'<='", "'>'", "'<'", 
			"'=='", "'equivalente'", "'<>'", "'{'", "'}'", "'['", "']'", "'('", "')'", 
			"','", "'.'", "';'", "':'", "'\"'", "'if'", "'else'", "'for'", "'print'", 
			"'int'", "'String'", "'while'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "SUMA", "RESTA", "MULT", "DIV", "ASIGNACION", "MAYOR_IGUALQ", "MENOR_IGUALQ", 
			"MAYOR_Q", "MENOR_Q", "IGUAL", "EQUIVALENTE", "DISTINTO", "LLAVES_A", 
			"LLAVES_C", "CORCHETE_A", "CORCHETE_C", "PARENTESIS_A", "PARENTESIS_C", 
			"COMA", "PUNTO", "PUNTOCOMA", "DOSPUNTOS", "COMILLAS", "IF", "ELSE", 
			"FOR", "PRINT", "INT", "STRING", "WHILE", "NUMERO", "TEXTO", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "BNF_Compiler.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public BNF_CompilerParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramContext extends ParserRuleContext {
		public List<DecimalContext> decimal() {
			return getRuleContexts(DecimalContext.class);
		}
		public DecimalContext decimal(int i) {
			return getRuleContext(DecimalContext.class,i);
		}
		public List<NumeroContext> numero() {
			return getRuleContexts(NumeroContext.class);
		}
		public NumeroContext numero(int i) {
			return getRuleContext(NumeroContext.class,i);
		}
		public List<IdContext> id() {
			return getRuleContexts(IdContext.class);
		}
		public IdContext id(int i) {
			return getRuleContext(IdContext.class,i);
		}
		public List<While_TContext> while_T() {
			return getRuleContexts(While_TContext.class);
		}
		public While_TContext while_T(int i) {
			return getRuleContext(While_TContext.class,i);
		}
		public List<PrintContext> print() {
			return getRuleContexts(PrintContext.class);
		}
		public PrintContext print(int i) {
			return getRuleContext(PrintContext.class,i);
		}
		public List<For_TContext> for_T() {
			return getRuleContexts(For_TContext.class);
		}
		public For_TContext for_T(int i) {
			return getRuleContext(For_TContext.class,i);
		}
		public List<If_TContext> if_T() {
			return getRuleContexts(If_TContext.class);
		}
		public If_TContext if_T(int i) {
			return getRuleContext(If_TContext.class,i);
		}
		public List<Else_TContext> else_T() {
			return getRuleContexts(Else_TContext.class);
		}
		public Else_TContext else_T(int i) {
			return getRuleContext(Else_TContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BNF_CompilerListener ) ((BNF_CompilerListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BNF_CompilerListener ) ((BNF_CompilerListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BNF_CompilerVisitor ) return ((BNF_CompilerVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(36); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				setState(36);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
				case 1:
					{
					setState(28);
					decimal();
					}
					break;
				case 2:
					{
					setState(29);
					numero();
					}
					break;
				case 3:
					{
					setState(30);
					id();
					}
					break;
				case 4:
					{
					setState(31);
					while_T();
					}
					break;
				case 5:
					{
					setState(32);
					print();
					}
					break;
				case 6:
					{
					setState(33);
					for_T();
					}
					break;
				case 7:
					{
					setState(34);
					if_T();
					}
					break;
				case 8:
					{
					setState(35);
					else_T();
					}
					break;
				}
				}
				setState(38); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << IF) | (1L << ELSE) | (1L << FOR) | (1L << PRINT) | (1L << WHILE) | (1L << NUMERO) | (1L << TEXTO))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IgnoreContext extends ParserRuleContext {
		public TerminalNode WS() { return getToken(BNF_CompilerParser.WS, 0); }
		public IgnoreContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ignore; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BNF_CompilerListener ) ((BNF_CompilerListener)listener).enterIgnore(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BNF_CompilerListener ) ((BNF_CompilerListener)listener).exitIgnore(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BNF_CompilerVisitor ) return ((BNF_CompilerVisitor<? extends T>)visitor).visitIgnore(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IgnoreContext ignore() throws RecognitionException {
		IgnoreContext _localctx = new IgnoreContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_ignore);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(40);
			match(WS);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IdContext extends ParserRuleContext {
		public TerminalNode TEXTO() { return getToken(BNF_CompilerParser.TEXTO, 0); }
		public IdContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_id; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BNF_CompilerListener ) ((BNF_CompilerListener)listener).enterId(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BNF_CompilerListener ) ((BNF_CompilerListener)listener).exitId(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BNF_CompilerVisitor ) return ((BNF_CompilerVisitor<? extends T>)visitor).visitId(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IdContext id() throws RecognitionException {
		IdContext _localctx = new IdContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_id);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(42);
			match(TEXTO);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NumeroContext extends ParserRuleContext {
		public TerminalNode NUMERO() { return getToken(BNF_CompilerParser.NUMERO, 0); }
		public NumeroContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_numero; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BNF_CompilerListener ) ((BNF_CompilerListener)listener).enterNumero(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BNF_CompilerListener ) ((BNF_CompilerListener)listener).exitNumero(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BNF_CompilerVisitor ) return ((BNF_CompilerVisitor<? extends T>)visitor).visitNumero(this);
			else return visitor.visitChildren(this);
		}
	}

	public final NumeroContext numero() throws RecognitionException {
		NumeroContext _localctx = new NumeroContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_numero);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(44);
			match(NUMERO);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DecimalContext extends ParserRuleContext {
		public List<TerminalNode> NUMERO() { return getTokens(BNF_CompilerParser.NUMERO); }
		public TerminalNode NUMERO(int i) {
			return getToken(BNF_CompilerParser.NUMERO, i);
		}
		public TerminalNode PUNTOCOMA() { return getToken(BNF_CompilerParser.PUNTOCOMA, 0); }
		public List<TerminalNode> PUNTO() { return getTokens(BNF_CompilerParser.PUNTO); }
		public TerminalNode PUNTO(int i) {
			return getToken(BNF_CompilerParser.PUNTO, i);
		}
		public DecimalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_decimal; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BNF_CompilerListener ) ((BNF_CompilerListener)listener).enterDecimal(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BNF_CompilerListener ) ((BNF_CompilerListener)listener).exitDecimal(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BNF_CompilerVisitor ) return ((BNF_CompilerVisitor<? extends T>)visitor).visitDecimal(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DecimalContext decimal() throws RecognitionException {
		DecimalContext _localctx = new DecimalContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_decimal);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(46);
			match(NUMERO);
			setState(49); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(47);
				match(PUNTO);
				setState(48);
				match(NUMERO);
				}
				}
				setState(51); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==PUNTO );
			setState(53);
			match(PUNTOCOMA);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OperadoresContext extends ParserRuleContext {
		public List<TerminalNode> SUMA() { return getTokens(BNF_CompilerParser.SUMA); }
		public TerminalNode SUMA(int i) {
			return getToken(BNF_CompilerParser.SUMA, i);
		}
		public List<TerminalNode> RESTA() { return getTokens(BNF_CompilerParser.RESTA); }
		public TerminalNode RESTA(int i) {
			return getToken(BNF_CompilerParser.RESTA, i);
		}
		public List<TerminalNode> MULT() { return getTokens(BNF_CompilerParser.MULT); }
		public TerminalNode MULT(int i) {
			return getToken(BNF_CompilerParser.MULT, i);
		}
		public List<TerminalNode> DIV() { return getTokens(BNF_CompilerParser.DIV); }
		public TerminalNode DIV(int i) {
			return getToken(BNF_CompilerParser.DIV, i);
		}
		public List<TerminalNode> MAYOR_IGUALQ() { return getTokens(BNF_CompilerParser.MAYOR_IGUALQ); }
		public TerminalNode MAYOR_IGUALQ(int i) {
			return getToken(BNF_CompilerParser.MAYOR_IGUALQ, i);
		}
		public List<TerminalNode> MENOR_IGUALQ() { return getTokens(BNF_CompilerParser.MENOR_IGUALQ); }
		public TerminalNode MENOR_IGUALQ(int i) {
			return getToken(BNF_CompilerParser.MENOR_IGUALQ, i);
		}
		public List<TerminalNode> MAYOR_Q() { return getTokens(BNF_CompilerParser.MAYOR_Q); }
		public TerminalNode MAYOR_Q(int i) {
			return getToken(BNF_CompilerParser.MAYOR_Q, i);
		}
		public List<TerminalNode> MENOR_Q() { return getTokens(BNF_CompilerParser.MENOR_Q); }
		public TerminalNode MENOR_Q(int i) {
			return getToken(BNF_CompilerParser.MENOR_Q, i);
		}
		public List<TerminalNode> IGUAL() { return getTokens(BNF_CompilerParser.IGUAL); }
		public TerminalNode IGUAL(int i) {
			return getToken(BNF_CompilerParser.IGUAL, i);
		}
		public List<TerminalNode> DISTINTO() { return getTokens(BNF_CompilerParser.DISTINTO); }
		public TerminalNode DISTINTO(int i) {
			return getToken(BNF_CompilerParser.DISTINTO, i);
		}
		public List<TerminalNode> ASIGNACION() { return getTokens(BNF_CompilerParser.ASIGNACION); }
		public TerminalNode ASIGNACION(int i) {
			return getToken(BNF_CompilerParser.ASIGNACION, i);
		}
		public OperadoresContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_operadores; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BNF_CompilerListener ) ((BNF_CompilerListener)listener).enterOperadores(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BNF_CompilerListener ) ((BNF_CompilerListener)listener).exitOperadores(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BNF_CompilerVisitor ) return ((BNF_CompilerVisitor<? extends T>)visitor).visitOperadores(this);
			else return visitor.visitChildren(this);
		}
	}

	public final OperadoresContext operadores() throws RecognitionException {
		OperadoresContext _localctx = new OperadoresContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_operadores);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(56); 
			_errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					setState(55);
					_la = _input.LA(1);
					if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << SUMA) | (1L << RESTA) | (1L << MULT) | (1L << DIV) | (1L << ASIGNACION) | (1L << MAYOR_IGUALQ) | (1L << MENOR_IGUALQ) | (1L << MAYOR_Q) | (1L << MENOR_Q) | (1L << IGUAL) | (1L << DISTINTO))) != 0)) ) {
					_errHandler.recoverInline(this);
					}
					else {
						if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
						_errHandler.reportMatch(this);
						consume();
					}
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(58); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SimbolosContext extends ParserRuleContext {
		public List<TerminalNode> LLAVES_A() { return getTokens(BNF_CompilerParser.LLAVES_A); }
		public TerminalNode LLAVES_A(int i) {
			return getToken(BNF_CompilerParser.LLAVES_A, i);
		}
		public List<TerminalNode> LLAVES_C() { return getTokens(BNF_CompilerParser.LLAVES_C); }
		public TerminalNode LLAVES_C(int i) {
			return getToken(BNF_CompilerParser.LLAVES_C, i);
		}
		public List<TerminalNode> PARENTESIS_A() { return getTokens(BNF_CompilerParser.PARENTESIS_A); }
		public TerminalNode PARENTESIS_A(int i) {
			return getToken(BNF_CompilerParser.PARENTESIS_A, i);
		}
		public List<TerminalNode> PARENTESIS_C() { return getTokens(BNF_CompilerParser.PARENTESIS_C); }
		public TerminalNode PARENTESIS_C(int i) {
			return getToken(BNF_CompilerParser.PARENTESIS_C, i);
		}
		public List<TerminalNode> CORCHETE_A() { return getTokens(BNF_CompilerParser.CORCHETE_A); }
		public TerminalNode CORCHETE_A(int i) {
			return getToken(BNF_CompilerParser.CORCHETE_A, i);
		}
		public List<TerminalNode> CORCHETE_C() { return getTokens(BNF_CompilerParser.CORCHETE_C); }
		public TerminalNode CORCHETE_C(int i) {
			return getToken(BNF_CompilerParser.CORCHETE_C, i);
		}
		public List<TerminalNode> PUNTO() { return getTokens(BNF_CompilerParser.PUNTO); }
		public TerminalNode PUNTO(int i) {
			return getToken(BNF_CompilerParser.PUNTO, i);
		}
		public List<TerminalNode> DOSPUNTOS() { return getTokens(BNF_CompilerParser.DOSPUNTOS); }
		public TerminalNode DOSPUNTOS(int i) {
			return getToken(BNF_CompilerParser.DOSPUNTOS, i);
		}
		public List<TerminalNode> PUNTOCOMA() { return getTokens(BNF_CompilerParser.PUNTOCOMA); }
		public TerminalNode PUNTOCOMA(int i) {
			return getToken(BNF_CompilerParser.PUNTOCOMA, i);
		}
		public List<TerminalNode> COMILLAS() { return getTokens(BNF_CompilerParser.COMILLAS); }
		public TerminalNode COMILLAS(int i) {
			return getToken(BNF_CompilerParser.COMILLAS, i);
		}
		public List<TerminalNode> COMA() { return getTokens(BNF_CompilerParser.COMA); }
		public TerminalNode COMA(int i) {
			return getToken(BNF_CompilerParser.COMA, i);
		}
		public SimbolosContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_simbolos; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BNF_CompilerListener ) ((BNF_CompilerListener)listener).enterSimbolos(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BNF_CompilerListener ) ((BNF_CompilerListener)listener).exitSimbolos(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BNF_CompilerVisitor ) return ((BNF_CompilerVisitor<? extends T>)visitor).visitSimbolos(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SimbolosContext simbolos() throws RecognitionException {
		SimbolosContext _localctx = new SimbolosContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_simbolos);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(61); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(60);
				_la = _input.LA(1);
				if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << LLAVES_A) | (1L << LLAVES_C) | (1L << CORCHETE_A) | (1L << CORCHETE_C) | (1L << PARENTESIS_A) | (1L << PARENTESIS_C) | (1L << COMA) | (1L << PUNTO) | (1L << PUNTOCOMA) | (1L << DOSPUNTOS) | (1L << COMILLAS))) != 0)) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				}
				}
				setState(63); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << LLAVES_A) | (1L << LLAVES_C) | (1L << CORCHETE_A) | (1L << CORCHETE_C) | (1L << PARENTESIS_A) | (1L << PARENTESIS_C) | (1L << COMA) | (1L << PUNTO) | (1L << PUNTOCOMA) | (1L << DOSPUNTOS) | (1L << COMILLAS))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EquivalenteContext extends ParserRuleContext {
		public TerminalNode EQUIVALENTE() { return getToken(BNF_CompilerParser.EQUIVALENTE, 0); }
		public TerminalNode PARENTESIS_A() { return getToken(BNF_CompilerParser.PARENTESIS_A, 0); }
		public TerminalNode COMA() { return getToken(BNF_CompilerParser.COMA, 0); }
		public TerminalNode PARENTESIS_C() { return getToken(BNF_CompilerParser.PARENTESIS_C, 0); }
		public List<CadenaContext> cadena() {
			return getRuleContexts(CadenaContext.class);
		}
		public CadenaContext cadena(int i) {
			return getRuleContext(CadenaContext.class,i);
		}
		public List<IdContext> id() {
			return getRuleContexts(IdContext.class);
		}
		public IdContext id(int i) {
			return getRuleContext(IdContext.class,i);
		}
		public EquivalenteContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_equivalente; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BNF_CompilerListener ) ((BNF_CompilerListener)listener).enterEquivalente(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BNF_CompilerListener ) ((BNF_CompilerListener)listener).exitEquivalente(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BNF_CompilerVisitor ) return ((BNF_CompilerVisitor<? extends T>)visitor).visitEquivalente(this);
			else return visitor.visitChildren(this);
		}
	}

	public final EquivalenteContext equivalente() throws RecognitionException {
		EquivalenteContext _localctx = new EquivalenteContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_equivalente);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(65);
			match(EQUIVALENTE);
			setState(66);
			match(PARENTESIS_A);
			setState(69);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case COMILLAS:
				{
				setState(67);
				cadena();
				}
				break;
			case TEXTO:
				{
				setState(68);
				id();
				}
				break;
			case COMA:
				break;
			default:
				break;
			}
			setState(71);
			match(COMA);
			setState(74);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case COMILLAS:
				{
				setState(72);
				cadena();
				}
				break;
			case TEXTO:
				{
				setState(73);
				id();
				}
				break;
			case PARENTESIS_C:
				break;
			default:
				break;
			}
			setState(76);
			match(PARENTESIS_C);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CadenaContext extends ParserRuleContext {
		public List<TerminalNode> COMILLAS() { return getTokens(BNF_CompilerParser.COMILLAS); }
		public TerminalNode COMILLAS(int i) {
			return getToken(BNF_CompilerParser.COMILLAS, i);
		}
		public List<TerminalNode> TEXTO() { return getTokens(BNF_CompilerParser.TEXTO); }
		public TerminalNode TEXTO(int i) {
			return getToken(BNF_CompilerParser.TEXTO, i);
		}
		public List<TerminalNode> WS() { return getTokens(BNF_CompilerParser.WS); }
		public TerminalNode WS(int i) {
			return getToken(BNF_CompilerParser.WS, i);
		}
		public CadenaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cadena; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BNF_CompilerListener ) ((BNF_CompilerListener)listener).enterCadena(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BNF_CompilerListener ) ((BNF_CompilerListener)listener).exitCadena(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BNF_CompilerVisitor ) return ((BNF_CompilerVisitor<? extends T>)visitor).visitCadena(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CadenaContext cadena() throws RecognitionException {
		CadenaContext _localctx = new CadenaContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_cadena);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(78);
			match(COMILLAS);
			setState(80); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(79);
				_la = _input.LA(1);
				if ( !(_la==TEXTO || _la==WS) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				}
				}
				setState(82); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==TEXTO || _la==WS );
			setState(84);
			match(COMILLAS);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
